# alligator_is_green

./: .travis.yml  CMakeLists.txt  README.md
lib/: alligator.h  keeper.h
src/: main.cpp
